--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.8.1"
-geekorm = { version = "0.10", features = ["all", "hash", "libsql", "helpers"] }
+geekorm = { version = "0.10", features = ["all", "hash", "libsql", "helpers", "migrations", "backends"] }
 libsql = "0.6.0"
 rand = "0.9"
 serde = "1.0.217"
